--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "axios": "^0.19.2",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^2.1.8",
+    "react-toastify": "^5.5.0"
   }
 }
